# Computer-Graphics-Project

./: .gitignore  CMakeSettings.json  README.md
Lab01/: CMakeLists.txt  Lab1.sln  main.cpp
Lab02/: CMakeLists.txt  Lab2.sln  Lab2.vcxproj  main.cpp
Lab03/: CMakeLists.txt  Lab3.sln  Lab3.vcxproj  image_io.cpp  image_io.h  main.cpp
Lab04/: CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Color.h  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  Lab4.sln  Lab4.vcxproj  Light.h  Main.cpp  Material.h  Plane.cpp  Ray.h  Raytrace.cpp  Raytrace.h  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Util.cpp  Util.h  Vector3d.h
Lab04/Release/: Lab4.exe.recipe  Lab4.vcxproj.FileListAbsolute.txt
Lab04/Release/Lab4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: Lab1.exe.recipe  Lab1.vcxproj.FileListAbsolute.txt
Release/Lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
